MSEARCH-557: Call number browse with call number type shows irrelevant result fix (#416)
* MSEARCH-557: Small fix

* MSEARCH-557: Removed unnecessary parts of logic